testsuites/LLT/compiler/Diagnose/lex_test/lex_expected_identifier_after_dollar/case2.expect.out
error: expected identifier after '$', found keyword 'func'
  ==> case2.cj:14:14:
   | 
14 |     "cangjie ${$func $struct}""cangjie1 ${$is}"
   |                 ^^^^ expected identifier after '$'
   | 
help: you could escape keyword as identifier using '`':
   | 
14 |     "cangjie ${$`func` $struct}""cangjie1 ${$is}"
   |                 ~~~~~~ 
   | 

error: expected identifier after '$', found keyword 'struct'
  ==> case2.cj:14:20:
   | 
14 |     "cangjie ${$func $struct}""cangjie1 ${$is}"
   |                       ^^^^^^ expected identifier after '$'
   | 
help: you could escape keyword as identifier using '`':
   | 
14 |     "cangjie ${$func $`struct`}""cangjie1 ${$is}"
   |                       ~~~~~~~~ 
   | 

2 errors generated, 2 errors printed.
